# venus-gx-plugins

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
catalog/: plugins.json
crates/plugin-manager-core/: Cargo.toml
crates/plugin-manager-core/src/: contract.rs  error.rs  lib.rs  lifecycle.rs  package.rs  registry.rs  transaction.rs
crates/venus-plugin-manager/: Cargo.toml
crates/venus-plugin-manager/src/: bus_item.rs  catalog.rs  engine.rs  installer.rs  lib.rs  main.rs  package_builder.rs  publisher.rs  runit.rs  service.rs  settings.rs  signing.rs  update.rs
docs/: ARCHITECTURE.md  DISTRIBUTION.md  PLUGIN-FORMAT.md
infra/cloudflare/: _headers
manager/: release.json
plugins/loxone-tanks/: DESIGN.md  README.md  manifest.json
plugins/loxone-tanks/native/: Cargo.toml
plugins/loxone-tanks/native/src/: bus_item.rs  config.rs  discovery.rs  lib.rs  loxone.rs  main.rs  probe.rs  publisher.rs  runtime.rs  service.rs  tank.rs
plugins/loxone-tanks/qml/: PageLoxoneDiscovery.qml  PageLoxoneTanksSettings.qml
plugins/rathole/: README.md  THIRD_PARTY.md  manifest.json
plugins/rathole/native/: Cargo.toml
plugins/rathole/native/src/: bus_item.rs  config.rs  lib.rs  main.rs  process.rs  publisher.rs  service.rs
plugins/rathole/qml/: PageRatholeAddService.qml  PageRatholeService.qml  PageRatholeServices.qml  PageRatholeSettings.qml  RatholeServiceRow.qml
plugins/tpms/: README.md  manifest.json
plugins/tpms/native/: Cargo.toml
plugins/tpms/native/src/: lib.rs  linux.rs  main.rs  state.rs
plugins/tpms/qml/: OverviewTpms.qml  PageTpmsBind.qml  PageTpmsDiagnostics.qml  PageTpmsDiscovered.qml  PageTpmsSensorDetails.qml  PageTpmsSettings.qml  PageTpmsWheel.qml
scripts/: build-armv7.sh  build-pages-dist.sh  package-loxone-tanks.sh  package-rathole.sh  package-tpms.sh
ui/qml/: PagePluginDashboardHost.qml  PagePluginDashboards.qml  PagePluginDetails.qml  PagePluginList.qml  PagePlugins.qml  PluginDashboardController.qml  PluginDeviceEntriesModel.qml
