[workspace]
members = [
    "crates/plugin-manager-core",
    "crates/venus-plugin-manager",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jkqq147/venus-gx-plugins"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
flate2 = "1"
fs2 = "0.4"
sha2 = "0.10"
tar = "0.4"
