[workspace]
members = [
    "crates/plugin-manager-core",
    "crates/venus-plugin-manager",
    "plugins/tpms/native",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jkqq147/venus-gx-plugins"

[workspace.dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
flate2 = "1"
fs2 = "0.4"
sha2 = "0.10"
tar = "0.4"
zbus = "5.17"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
