[workspace]
members = [
    "crates/plugin-manager-core",
    "crates/venus-plugin-manager",
    "plugins/loxone-tanks/native",
    "plugins/rathole/native",
    "plugins/tpms/native",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jkqq147/venus-gx-plugins"

[workspace.dependencies]
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
hmac = "0.12"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
rsa = { version = "0.9", features = ["pem"] }
sha1 = "0.10"
thiserror = "2"
flate2 = "1"
fs2 = "0.4"
sha2 = "0.10"
tar = "0.4"
tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
toml = "0.8"
zbus = "5.17"
zeroize = "1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
