[package]
name = "plugin-manager-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Contracts, local registry, and package transactions for Venus GX plugins"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
flate2.workspace = true
fs2.workspace = true
sha2.workspace = true
tar.workspace = true

[dev-dependencies]
tempfile = "3"
