[package]
name = "venus-plugin-manager"
version = "0.1.12"
edition.workspace = true
license.workspace = true
description = "Venus GX plugin manager"
repository.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
plugin-manager-core = { path = "../plugin-manager-core" }
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile = "3"
