[package]
name = "venus-loxone-tanks-plugin"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "Read-only Loxone tank sensor bridge for Venus OS"
repository.workspace = true

[[bin]]
name = "venus-loxone-tanks"
path = "src/main.rs"

[dependencies]
aes.workspace = true
base64.workspace = true
cbc.workspace = true
hmac.workspace = true
rand_core.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tungstenite.workspace = true
zbus.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
