[package]
name = "venus-rathole-plugin"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Venus OS configuration adapter for the bundled Rathole client"
repository.workspace = true

[[bin]]
name = "venus-rathole"
path = "src/main.rs"

[dependencies]
libc.workspace = true
rand_core.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
zbus.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3"
