[package]
name = "venus-tpms-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Venus GX Plugins adapter for the native TPMS service"
repository.workspace = true

[[bin]]
name = "venus-tpms-ble"
path = "src/main.rs"

[dependencies]
tpms-core = { package = "venus-tpms-ble", git = "https://github.com/jkqq147/venus-tpms-ble.git", rev = "af21ad8d846b454b01ec26efafbabef8dc8a4a60" }
