[package]
name = "venus-tpms-plugin"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "Venus GX Plugins adapter for the native TPMS service"
repository.workspace = true

[[bin]]
name = "venus-tpms-ble"
path = "src/main.rs"

[dependencies]
tpms-core = { package = "venus-tpms-ble", git = "https://github.com/jkqq147/venus-tpms-ble.git", rev = "dbb46a53808dd09c792acb28b4e7e7ed0e9adf1c" }
